add SEO first part

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact - Pierre-Loup Perez</title>
+    <meta name="description" content="Contactez Pierre-Loup Perez - Web Developper, par formulaire de contact sécurisé.">
+    <title>Contact - Pierre-Loup Perez - Web Developper</title>
     <link
       rel="stylesheet"
       href="https://bootswatch.com/5/spacelab/bootstrap.min.css"
@@ -99,7 +100,7 @@
           <span class="message-alerte text-info">Choisissez un nom ne comprenant que des lettres et des chiffres s'il-vous-plait</span>
           <div class="input-group">
             <input type="text" name="name" id="name" placeholder="Votre nom" class="form-control" required>
-            <img src="" alt="icone de validation" class="icone-verif ms-2">
+            <img src="" alt="icone de validation" class="icone-verif ms-2" title="icone de validation">
           </div>
 
         </div>
@@ -109,7 +110,7 @@
           <span class="message-alerte text-info">Veuillez entrer un mail valide s'il-vous-plait</span>
           <div class="input-group">
             <input type="email" name="email" id="email" placeholder="exemple@mail.fr" class="form-control" required>
-            <img src="" alt="icone de validation" class="icone-verif ms-2">
+            <img src="" alt="icone de validation" class="icone-verif ms-2" title="icone de validation">
           </div>
         </div>
 
@@ -118,7 +119,7 @@
           <span class="message-alerte text-info">Veuillez remplir ce champ s'il-vous-plait</span>
           <div class="input-group">
             <textarea name="message" id="message" rows="10" class="form-control" placeholder="Corps de votre message" required></textarea>
-            <img src="" alt="icone de validation" class="icone-verif ms-2">
+            <img src="" alt="icone de validation" class="icone-verif ms-2" title="icone de validation">
           </div>
         </div>
 
