--- a/cv.html
+++ b/cv.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Curriculum Vitae - Pierre-Loup Perez</title>
+    <meta name="description" content="CV Curriculum Vitae de Pierre-Loup Perez - Web Developper, Compétences, Expériences, Formations et Intérets personnels">
+    <title>Curriculum Vitae - Pierre-Loup Perez - Web Developper</title>
     <link
       rel="stylesheet"
       href="https://bootswatch.com/5/spacelab/bootstrap.min.css"
@@ -75,7 +76,7 @@
       <!-- titre du CV -->
       <div class="row align-items-center justify-content-center alert alert-secondary py-5 py-md-4">
         <h2 class="col-12 col-sm-6 col-md-8 text-primary">Développeur Web Junior</h2>
-        <img class="photoProfil col-12 col-sm-6 col-md-4" src="/assets/PhotoCV1reduit.jpg" alt="photo pierre-loup">
+        <img class="photoProfil col-12 col-sm-6 col-md-4" src="/assets/PhotoCV1reduit.jpg" alt="photo pierre-loup" title="Photo de CV de Pierre-Loup Perez - Web Developper">
       </div>
       <p class="mt-3"><span id="age"></span> ans, permisB, véhiculé</p>
 
@@ -93,27 +94,27 @@
             <section class="row align-items-center">
               <h4 class="col-12 col-lg-2">WebDev</h4>
               <p class="col-12 col-lg-3">
-                <img src="/assets/htmlCssJs.png" alt="HtmlCssJs" class="icone">
+                <img src="/assets/htmlCssJs.png" alt="HtmlCssJs" class="icone" title="Icone HtmlCssJs">
               </p>
               <p class="col-12 col-lg-4">
-                <img src="/assets/git.png" alt="git" class="icone">
-                <img src="/assets/github.png" alt="github" class="icone">
-                <img src="/assets/laravel.png" alt="laravel" class="icone">
-                <img src="/assets/java.png" alt="java" class="icone">
+                <img src="/assets/git.png" alt="git" class="icone"title="Icone Git">
+                <img src="/assets/github.png" alt="github" class="icone" title="Icone Github">
+                <img src="/assets/laravel.png" alt="laravel" class="icone" title="Icone Laravel">
+                <img src="/assets/java.png" alt="java" class="icone" title="Icone Java">
               </p>
             </section>
             <hr class="mx-5">
             <section class="row">
               <h4 class="col-12 col-lg-2">Divers</h4>
               <p class="col-12 col-lg-3">
-                <img src="/assets/word.png" alt="word" class="icone">
-                <img src="/assets/powerpoint.png" alt="powerpoint" class="icone">
-                <img src="/assets/excel.png" alt="excel" class="icone">
+                <img src="/assets/word.png" alt="word" class="icone" title="Icone Word">
+                <img src="/assets/powerpoint.png" alt="powerpoint" class="icone"title="Icone Powerpoint">
+                <img src="/assets/excel.png" alt="excel" class="icone" title="Icone Excel">
               </p>
               <p class="col-12 col-lg-4">
-                <img src="/assets/protools.png" alt="protools" class="icone">
-                <img src="/assets/finale.png" alt="finale" class="icone">
-                <img src="/assets/samplitude.png" alt="samplitude" class="icone">
+                <img src="/assets/protools.png" alt="protools" class="icone" title="Icone Protools">
+                <img src="/assets/finale.png" alt="finale" class="icone" title="Icone Finale">
+                <img src="/assets/samplitude.png" alt="samplitude" class="icone" title="Icone Samplitude">
               </p>
             </section>
             <hr class="mx-5">
