--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio de Pierre-Loup Perez</title>
+    <meta name="description" content="Visitez le portfolio de Pierre-Loup Perez - Web Developper, découvrez ses compétences et les projets qu'il à réalisé">
+    <title>Portfolio de Pierre-Loup Perez - Web Developper</title>
     <link
       rel="stylesheet"
       href="https://bootswatch.com/5/spacelab/bootstrap.min.css"
@@ -103,10 +104,10 @@
       <article class="row my-3 justify-content-around">
 
         <section class="card bg-primary bg-opacity-10 border-primary col-12 col-sm-6 col-md-4">
-            <img class="card-img-top mt-2 border border-light" src="/assets/pilou_artreduit.jpg" alt="ecran d'accueil pilou_art">
+            <img class="card-img-top mt-2 border border-light" src="/assets/pilou_artreduit.jpg" alt="ecran d'accueil pilou_art" title="Page d'accueil de Pilou_art galerie d'images">
             <div class="card-header bg-primary bg-opacity-25 border border-light">Galerie d'image</div>
             <div class="card-body">
-                <h4 class="card-title">Galerie d'art de Pilou - Art by Pilou</h4>
+                <h3 class="card-title">Galerie d'art de Pilou - Art by Pilou</h3>
                 <div class="card-text">
                     <p>Projet "from scratch" Html/Scss/Javascript</p>
                     <p><small>galerie d'image pour <a href="https://www.instagram.com/pilou_art/" target="_blank">@pilou_art</a></small></p>
@@ -119,10 +120,10 @@
         </section>
 
         <section class="card bg-primary bg-opacity-10 border-primary col-12 col-sm-6 col-md-4">
-            <img class="card-img-top mt-2 border border-light"  src="/assets/maitressegereduit.jpg" alt="ecran d'accueil maitresse gé">
+            <img class="card-img-top mt-2 border border-light"  src="/assets/maitressegereduit.jpg" alt="ecran d'accueil maitresse gé" title="Page d'accueil du Blog de Maitresse Gé, Instagrameuse">
             <div class="card-header bg-primary bg-opacity-25  border border-light">Wordpress</div>
             <div class="card-body">
-                <h4 class="card-title">Le blog de Maitresse Gé</h4>
+                <h3 class="card-title">Le blog de Maitresse Gé</h3>
                 <div class="card-text">
                     <p>Projet "Wordpress" thème OceanWP-Elementor</p>
                     <p><small>blog de l'instagrameuse <a href="https://www.instagram.com/maitresse.ge/" target="_blank">@maitresse.ge</a></small></p>
@@ -135,10 +136,10 @@
         </section>
 
         <section class="card bg-primary bg-opacity-10 border-primary col-12 col-sm-6 col-md-4">
-          <img class="card-img-top mt-2 border border-light"  src="/assets/portfolioreduit.jpg" alt="ecran CV portfolio">
+          <img class="card-img-top mt-2 border border-light"  src="/assets/portfolioreduit.jpg" alt="ecran CV portfolio" title="Page du CV de Pierre-Loup Perez - Web Developper">
           <div class="card-header bg-primary bg-opacity-25 border border-light">Portfolio</div>
           <div class="card-body">
-              <h4 class="card-title">Portfolio de Pierre-Loup Perez</h4>
+              <h3 class="card-title">Portfolio de Pierre-Loup Perez</h3>
               <div class="card-text">
                   <p>Projet "Bootstrap" de portfolio</p>
                   <p><small>présentation de mes projets terminés</small></p>
