--- a/presentation.html
+++ b/presentation.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Présentation de Pierre-Loup Perez - Développeur Web</title>
+    <meta name="description" content="Présentation de Pierre-Loup Perez - Web Developper, ses compétences, ses expériences, sa personalité.">
+    <title>Présentation de Pierre-Loup Perez - Web Developper</title>
     <link
       rel="stylesheet"
       href="https://bootswatch.com/5/spacelab/bootstrap.min.css"
