--- a/bonus.html
+++ b/bonus.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact - Pierre-Loup Perez</title>
+    <meta name="description" content="Contenu Bonus du portfolio de Pierre-Loup Perez - Web Developper, jeux vidéos.">
+    <title>Bonus Page - Pierre-Loup Perez - Web Developper</title>
     <link
       rel="stylesheet"
       href="https://bootswatch.com/5/spacelab/bootstrap.min.css"
@@ -83,7 +84,7 @@
 
         <article id="snake">
             <h3>Le Mythique "SNAKE"</h3>
-            <img src="/assets/snake.jpg" alt="jeu snake"class="img-fluid mb-3">
+            <img src="/assets/snake.jpg" alt="jeu snake"class="img-fluid mb-3" title="écran type du jeu de Snake">
             <p>Un gameplay inventé en 1976 avec le jeu Blockade, que l'on retrouve dans des jeux comme Worm en 1978, Tron et Nibbler en 1982.</p>
             <p>Il est également connu pour les différentes version de Snake parues à partir de 1997 sur Nokia 6610</p>
             <a class="btn btn-secondary" href="snake.html">Essayer le jeu</a>
