--- a/mentions.html
+++ b/mentions.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mentions Légales - Pierre-Loup Perez</title>
+    <meta name="description" content="Mentions légales du Portfolio de Pierre-Loup Perez - Web Developper, informations importantes et recours possibles">
+    <title>Mentions Légales - Pierre-Loup Perez - Web Developper</title>
     <link
       rel="stylesheet"
       href="https://bootswatch.com/5/spacelab/bootstrap.min.css"
