--- a/projets.html
+++ b/projets.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Principaux projets en Web Developpement, réalisés par Pierre-Loup Perez, avec Javascript, Sass/Scss, Bootstrap, Wordpress">
     <title>Projets de développement web - Pierre-Loup Perez</title>
     <link
       rel="stylesheet"
@@ -112,7 +113,7 @@
           <h2>Mon Portfolio</h2>
         </section>
         <section class="imgProj col-12 col-md-6">
-          <img class="img-fluid border border-primary rounded" src="/assets/portfolio.jpg" alt="ecran CV portfolio">
+          <img class="img-fluid border border-primary rounded" src="/assets/portfolio.jpg" alt="ecran CV portfolio" title="Page du CV de Pierre-Loup Perez - Web Developper">
         </section>
         <section class="txtProj col-12 col-md-6 row">
           <h3>Projet Bootstrap et Js</h3>
@@ -141,7 +142,7 @@
           <a href="https://maitressege.fr" target="_blank" class="btn btn-secondary">Visitez le site</a>
         </section>
         <section class="imgProj col-12 col-md-6">
-          <img class="img-fluid border border-primary rounded" src="/assets/maitressege.jpg" alt="ecran accueil maitressege">
+          <img class="img-fluid border border-primary rounded" src="/assets/maitressege.jpg" alt="ecran accueil maitressege" title="Page d'accueil du Blog de Maitresse Gé, Instagrameuse">
         </section>
       </article>
       
@@ -151,7 +152,7 @@
           <h2>Galerie de Pilou_art</h2>
         </section>
         <section class="imgProj col-12 col-md-6">
-          <img class="img-fluid border border-primary rounded" src="/assets/pilou_art.jpg" alt="ecran accueil pilou_art">
+          <img class="img-fluid border border-primary rounded" src="/assets/pilou_art.jpg" alt="ecran accueil pilou_art" title="Page d'accueil de Pilou_art galerie d'images">
         </section>
         <section class="txtProj col-12 col-md-6 row">
           <h3>Projet "from scratch" avec Scss et Js</h3>
