--- a/snake.html
+++ b/snake.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact - Pierre-Loup Perez</title>
+    <meta name="description" content="Jeu vidéo de Snake - mobile compatible, et de difficulté croissante. Exercice Javascript">
+    <title>Snake - Bonus Page - Pierre-Loup Perez - Web Developper</title>
     <link
       rel="stylesheet"
       href="https://bootswatch.com/5/spacelab/bootstrap.min.css"
