SEO 2 add sitemap

--- a/cv.html
+++ b/cv.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="CV Curriculum Vitae de Pierre-Loup Perez - Web Developper, Compétences, Expériences, Formations et Intérets personnels">
+    <meta name="description" content="CV-Curriculum Vitae de Pierre-Loup Perez - Web Developper Fullstack, Compétences techniques, Expériences professionnelles, Formations et Intérets personnels">
     <title>Curriculum Vitae - Pierre-Loup Perez - Web Developper</title>
     <link
       rel="stylesheet"
