--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Visitez le portfolio de Pierre-Loup Perez - Web Developper, découvrez ses compétences et les projets qu'il à réalisé">
+    <meta name="description" content="Visitez le portfolio de Pierre-Loup Perez - Web Developper, découvrez ses compétences et les projets qu'il à réalisé, utilisant différentes technologies Web.">
     <title>Portfolio de Pierre-Loup Perez - Web Developper</title>
     <link
       rel="stylesheet"
@@ -65,10 +65,10 @@
     <header class="container-fluid text-center mb-5">
         <figure class="text-intro">
             <blockquote class="blockquote">
-                <h1 class="mb-2 display-4">Portfolio de Pierre-Loup Perez</h1>
+                <h1 class="mb-2 display-4">Développeur Web et Web Mobile</h1>
             </blockquote>
             <figcaption class="blockquote-footer text-dark">
-                Développeur <cite title="Source Title">Web et Web Mobile</cite>
+              Portfolio de <cite title="Source Title">Pierre-Loup Perez</cite>
             </figcaption>
         </figure>
     </header>
