--- a/mentions.html
+++ b/mentions.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Mentions légales du Portfolio de Pierre-Loup Perez - Web Developper, informations importantes et recours possibles">
+    <meta name="description" content="Mentions légales du Portfolio de Pierre-Loup Perez - Web Developper, Propriété intellectuelle, Gestion des données personnelles et recours possibles">
     <title>Mentions Légales - Pierre-Loup Perez - Web Developper</title>
     <link
       rel="stylesheet"
@@ -67,7 +67,7 @@
         <figcaption class="blockquote-footer text-dark">
           par
           <cite title="Source Title"
-            ><a href="https://www.generer-mentions-legales.com/generateur-mentions-legales.html"
+            ><a href="https://www.generer-mentions-legales.com/generateur-mentions-legales.html"  rel="nofollow"
               >générateur de mentions legales</a
             ></cite
           >
@@ -120,13 +120,13 @@
         par <strong>
           <a
             href="https://www.generer-mentions-legales.com/generateur-mentions-legales.html"
-            target="_blank"
+            target="_blank"  rel="nofollow"
             >générateur de mentions legales</a>
             </strong>.
             <br>
         Une eau toujours potable avec les <strong>
           <a
-            href="https://www.chamarrel.com/perles-de-ceramique-em-pxl-29_37.html"
+            href="https://www.chamarrel.com/perles-de-ceramique-em-pxl-29_37.html"  rel="nofollow"
             >perles de céramique</a>
             </strong>.
       </p>
