--- a/presentation.html
+++ b/presentation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Présentation de Pierre-Loup Perez - Web Developper, ses compétences, ses expériences, sa personalité.">
+    <meta name="description" content="Présentation de Pierre-Loup Perez - Web Developper, ses compétences en dev Web front et Back, ses expériences professionnelles atypiques et sa personalité.">
     <title>Présentation de Pierre-Loup Perez - Web Developper</title>
     <link
       rel="stylesheet"
