--- a/snake.html
+++ b/snake.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Jeu vidéo de Snake - mobile compatible, et de difficulté croissante. Exercice Javascript">
+    <meta name="description" content="Jeu vidéo de Snake - mobile compatible, et de difficulté croissante. Exercice Javascript à l'aide du tutoriel d'Enzo Ustariz completé par mes soins">
     <title>Snake - Bonus Page - Pierre-Loup Perez - Web Developper</title>
     <link
       rel="stylesheet"
