--- a/bonus.html
+++ b/bonus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Contenu Bonus du portfolio de Pierre-Loup Perez - Web Developper, jeux vidéos.">
+    <meta name="description" content="Contenu Bonus du portfolio de Pierre-Loup Perez - Web Developper, jeux vidéos, bravo vous avez trouvé la page la plus fun.">
     <title>Bonus Page - Pierre-Loup Perez - Web Developper</title>
     <link
       rel="stylesheet"
