--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Contactez Pierre-Loup Perez - Web Developper, par formulaire de contact sécurisé.">
+    <meta name="description" content="Contactez Pierre-Loup Perez - Web Developper, par formulaire de contact sécurisé. Je suis à l'écoute de vos projets, de vos idées, comme de vos suggestions.">
     <title>Contact - Pierre-Loup Perez - Web Developper</title>
     <link
       rel="stylesheet"
