add favicon and corrected links

--- a/bonus.html
+++ b/bonus.html
@@ -13,7 +13,15 @@
     <link rel="stylesheet" href="/styles/style.css" />
     <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.36.0/tsparticles.min.js"></script>
     <script src="/js/app.js" defer></script>
+    <link rel="shortcut icon" href="/assets/favicon.ico" />
+    <link rel="icon" href="/assets/android-chrome-192x192.png" sizes="192x192" />
+    <link rel="apple-touch-icon" href="/assets/apple-touch-icon.png" />
+    <meta
+      name="msapplication-TileImage"
+      content="/assets/android-chrome-192x192.png"
+    />
   </head>
+  
   <body id="top">
     
     <!-- fond particules -->
