--- a/mentions.html
+++ b/mentions.html
@@ -13,7 +13,15 @@
     <link rel="stylesheet" href="/styles/style.css" />
     <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.36.0/tsparticles.min.js"></script>
     <script src="/js/app.js" defer></script>
+    <link rel="shortcut icon" href="/assets/favicon.ico" />
+    <link rel="icon" href="/assets/android-chrome-192x192.png" sizes="192x192" />
+    <link rel="apple-touch-icon" href="/assets/apple-touch-icon.png" />
+    <meta
+      name="msapplication-TileImage"
+      content="/assets/android-chrome-192x192.png"
+    />
   </head>
+  
   <body id="top">
     <!-- fond particules -->
     <div id="tsparticles"></div>
@@ -82,7 +90,7 @@
         2004-575 du 21 juin 2004 pour la Confiance dans l'économie numérique,
         dite L.C.E.N., nous portons à la connaissance des utilisateurs et
         visiteurs du site :
-        <a href="http://perezpl.fr" target="_blank">perezpl.fr</a> les
+        <a href="https://perezpl.fr" target="_blank">perezpl.fr</a> les
         informations suivantes :
       </p>
 
@@ -136,7 +144,7 @@
       <p>
         Est désigné ci-après : <strong>Utilisateur</strong>, tout internaute se
         connectant et utilisant le site susnommé :
-        <a href="http://perezpl.fr" target="_blank">perezpl.fr</a>.<br>
+        <a href="https://perezpl.fr" target="_blank">perezpl.fr</a>.<br>
         Le site <strong>perezpl.fr</strong><strong> </strong>regroupe un
         ensemble de services, dans l'état,  mis à la disposition des
         utilisateurs. Il est ici précisé que ces derniers doivent rester
@@ -205,7 +213,7 @@
         Le paramétrage du logiciel de navigation permet d’informer de la
         présence de cookie et éventuellement, de la refuser de la manière
         décrite à l’adresse suivante :
-        <a href="http://www.cnil.fr">www.cnil.fr</a>. L’utilisateur peut
+        <a href="https://www.cnil.fr">www.cnil.fr</a>. L’utilisateur peut
         toutefois configurer le navigateur de son ordinateur pour refuser
         l’installation des cookies, sachant que le refus d'installation d'un
         cookie peut entraîner l’impossibilité d’accéder à certains services.
