--- a/mentions.html
+++ b/mentions.html
@@ -29,9 +29,9 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand btn btn-light text-primary" href="index.html#top"
-          >Perez Pl</a
-        >
+        <a class="navbar-brand ms-3" href="index.html">
+          <img src="/assets/android-chrome-192x192.png" alt="logo Pilou Dev">
+        </a>
         <button
           class="navbar-toggler"
           type="button"
