--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
   <link rel="icon" href="/assets/android-chrome-192x192.png" sizes="192x192" />
   <link rel="apple-touch-icon" href="/assets/apple-touch-icon.png" />
   <meta name="msapplication-TileImage" content="/assets/android-chrome-192x192.png" />
+  <link rel="image_src" href="/assets/android-chrome-512x512.png" />
+  <meta property="og:title" content="Développeur Web et Web Mobile">
+  <meta property="og:site_name" content="Pilou Dev Web">
+  <meta property="og:url" content="https://perezpl.fr">
+  <meta property="og:description" content="Site Web de Pierre-Loup Perez - Développeur Web et Web Mobile">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://perezpl.fr/assets/android-chrome-512x512.png">
+
 </head>
 
 <body id="top">
