--- a/mentions.html
+++ b/mentions.html
@@ -20,6 +20,7 @@
       name="msapplication-TileImage"
       content="/assets/android-chrome-192x192.png"
     />
+    <link rel="image_src" href="/assets/android-chrome-512x512.png" />
   </head>
   
   <body id="top">
