add shadows on nearly everything

--- a/bonus.html
+++ b/bonus.html
@@ -84,7 +84,7 @@
      
      <!-- Main -->
      <main class="container text-center">
-       <article class="text-center alert alert-secondary">
+       <article class="text-center alert alert-secondary shadow">
          <h2>Bravo</h2>
          <p>Vous etes arrivés sur la page la plus intéressante du site.</p>
          <p>Vous pourrez trouver ici, un jeu pour l'instant, mais j'espère assez vite pouvoir vous en proposer plus</p>
@@ -95,7 +95,7 @@
 
         <article id="snake">
             <h3>Le Mythique "SNAKE"</h3>
-            <img src="/assets/snake.jpg" alt="jeu snake"class="img-fluid mb-3" title="écran type du jeu de Snake">
+            <img src="/assets/snake.jpg" alt="jeu snake"class="img-fluid mb-3 shadow" title="écran type du jeu de Snake">
             <p>Un gameplay inventé en 1976 avec le jeu Blockade, que l'on retrouve dans des jeux comme Worm en 1978, Tron et Nibbler en 1982.</p>
             <p>Il est également connu pour les différentes version de Snake parues à partir de 1997 sur Nokia 6610</p>
             <a class="btn btn-secondary" href="snake.html">Essayer le jeu</a>
@@ -112,7 +112,7 @@
     </main>
 
     <div class="my-5 d-flex justify-content-end">
-      <a href="#top" class="btn btn-secondary me-5">Remonter</a>
+      <a href="#top" class="btn btn-secondary me-5 shadow">Remonter</a>
     </div>
 
    <!-- Footer -->
