--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
      
      <!-- Main -->
      <main class="container">
-       <article class="text-center alert alert-secondary">
+       <article class="text-center alert alert-secondary shadow">
          <h2>Informations</h2>
          <p>Vous venez de découvrir mon portfolio, et vous souhaitez me contacter?</p>
          <p>N'hésitez pas à me laisser un message ici, je vous répondrai rapidement.</p>
@@ -93,7 +93,7 @@
         <hr class="mx-5 bg-primary my-5">
       
         <!-- Alert -->
-        <div class="alert alert-warning text-center">
+        <div class="alert alert-warning text-center shadow">
          <span class="badge rounded-pill bg-warning me-2">Important</span>
          Aucune informations que vous me transmettrez ci-dessous ne sera transmise à un tiers
        </div>
