--- a/cv.html
+++ b/cv.html
@@ -85,7 +85,7 @@
 
     <main class="container text-center ">
       <!-- titre du CV -->
-      <div class="row align-items-center justify-content-center alert alert-secondary py-5 py-md-4">
+      <div class="row align-items-center justify-content-center alert alert-secondary py-5 py-md-4 shadow">
         <h2 class="col-12 col-sm-6 col-md-8 text-primary">Développeur Web Junior</h2>
         <img class="photoProfil col-12 col-sm-6 col-md-4" src="/assets/PhotoCV1reduit.jpg" alt="photo pierre-loup" title="Photo de CV de Pierre-Loup Perez - Web Developper">
       </div>
@@ -101,7 +101,7 @@
 
           <!-- Competences -->
           <article>
-            <h3 class="mb-3 alert alert-secondary">Competences</h3>
+            <h3 class="mb-3 alert alert-secondary shadow-sm">Competences</h3>
             <section class="row align-items-center">
               <h4 class="col-12 col-lg-2">WebDev</h4>
               <p class="col-12 col-lg-3">
@@ -143,7 +143,7 @@
           <hr class="mx-5">
           <!-- Expériences -->
           <article>
-            <h3 class="alert alert-secondary ">Experiences</h3>
+            <h3 class="alert alert-secondary shadow-sm">Experiences</h3>
             <section class="row align-items-center">
               <h4 class="col-12 col-lg-3">2011-2021</h4>
               <div class="col-12 col-lg-9">
@@ -174,7 +174,7 @@
 
         <!-- Colonne de droite -->
         <aside class="col-12 col-md-4 border-start">
-          <h3 class="alert alert-secondary ">Formations</h3>
+          <h3 class="alert alert-secondary shadow-sm">Formations</h3>
           <section>
             <h4>2021-2022</h4>
             <p>Développeur Web et Web Mobile au GRETA Lyon-Métropole</p>
@@ -204,7 +204,7 @@
 
       <!-- Pied du CV - Intérets -->
       <article class="col-12 row align-items-center justify-content-evenly">
-        <h3 class="col-12 col-md-3 alert alert-secondary ">Interets</h3>
+        <h3 class="col-12 col-md-3 alert alert-secondary shadow-sm">Interets</h3>
         <ul class="col-12 col-md-8 text-start">
           <li>Informatique : intérêt personnel pour la Cybersécurité</li>
           <li>Sport : golf, football, running</li>
@@ -214,16 +214,16 @@
       </article>
 
       <!-- CTA -->
-      <article class="text-center alert alert-info">
+      <article class="text-center alert alert-info shadow">
         <p>Mon CV vous parait intéressant? Vous souhaitez en savoir plus?</p>
         <p>N'hésitez plus</p>
-        <a class="btn btn-primary btn-lg" href="contact.html">Contactez-moi</a>
+        <a class="btn btn-primary btn-lg shadow" href="contact.html">Contactez-moi</a>
       </article>
 
     </main>
 
     <div class="my-5 d-flex justify-content-end">
-      <a href="#top" class="btn btn-secondary me-5">Remonter</a>
+      <a href="#top" class="btn btn-secondary me-5 shadow">Remonter</a>
     </div>
 
    <!-- Footer -->
