--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <meta property="og:description" content="Site Web de Pierre-Loup Perez - Développeur Web et Web Mobile">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://perezpl.fr/assets/android-chrome-512x512.png">
+  <meta name="twitter:site" content="@PierreloupPerez">
+  <meta name="twitter:creator" content="@PierreloupPerez">
+  <meta property="fb:app_id" content="444629953848287">
 
 </head>
 
@@ -105,7 +108,7 @@
     <hr class="mx-5 bg-primary" />
 
     <article class="row my-3 justify-content-around">
-      <section class="
+      <section class="shadow
             card
             bg-primary bg-opacity-10
             border-primary
@@ -137,7 +140,7 @@
         </div>
       </section>
 
-      <section class="
+      <section class="shadow
             card
             bg-primary bg-opacity-10
             border-primary
@@ -169,7 +172,7 @@
         </div>
       </section>
 
-      <section class="
+      <section class="shadow
             card
             bg-primary bg-opacity-10
             border-primary
@@ -202,15 +205,15 @@
     <hr class="mx-5 bg-primary" />
 
     <!-- CTA -->
-    <article class="text-center alert alert-info">
+    <article class="text-center alert alert-info shadow">
       <p>Mes projets vous plaisent? Mon profil vous intéresse?</p>
       <p>N'hésitez plus</p>
-      <a class="btn btn-primary btn-lg" href="contact.html">Contactez-moi</a>
+      <a class="btn btn-primary btn-lg shadow" href="contact.html">Contactez-moi</a>
     </article>
   </main>
 
   <div class="my-5 d-flex justify-content-end">
-    <a href="#top" class="btn btn-secondary me-5">Remonter</a>
+    <a href="#top" class="btn btn-secondary me-5 shadow">Remonter</a>
   </div>
 
   <!-- Footer -->
