--- a/mentions.html
+++ b/mentions.html
@@ -276,7 +276,7 @@
     </main>
 
     <div class="my-5 d-flex justify-content-end">
-      <a href="#top" class="btn btn-secondary me-5">Remonter</a>
+      <a href="#top" class="btn btn-secondary me-5 shadow">Remonter</a>
     </div>
 
    <!-- Footer -->
