--- a/presentation.html
+++ b/presentation.html
@@ -85,7 +85,7 @@
 
     <main class="container">
 
-      <article class="text-center alert alert-secondary">
+      <article class="text-center alert alert-secondary shadow">
         <h2>Qui suis-je?</h2>
         <p>Je suis un <a href="#devweb">Développeur Web Junior</a> de <span id="age"></span> ans, pacsé, père de 2 enfants, originaire de et installé dans la région lyonnaise.</p>
         <p>Ayant un passé de <a href="#musmili">musicien-militaire</a>, je peux vous faire profiter d'expériences incomparables, et d'un savoir-être très apprécié par mes collègues.</p>
@@ -169,17 +169,17 @@
       <hr class="mx-5 bg-primary">
       
       <!-- CTA -->
-      <article class="text-center alert alert-info">
+      <article class="text-center alert alert-info shadow">
         <p>Mon profil pourrait convenir à votre entreprise? Mon expérience vous intéresse?</p>
         <p>N'hésitez plus</p>
-        <a class="btn btn-primary btn-lg" href="contact.html">Contactez-moi</a>
+        <a class="btn btn-primary btn-lg shadow" href="contact.html">Contactez-moi</a>
       </article>
       
 
     </main>
 
     <div class="my-5 d-flex justify-content-end">
-      <a href="#top" class="btn btn-secondary me-5">Remonter</a>
+      <a href="#top" class="btn btn-secondary me-5 shadow">Remonter</a>
     </div>
 
    <!-- Footer -->
