--- a/projets.html
+++ b/projets.html
@@ -87,7 +87,7 @@
     <main class="container">
 
       <!-- mini-nav -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-3">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-3 shadow-sm">
         <div class="container-fluid">
           <button
             class="navbar-toggler mx-auto"
@@ -119,7 +119,7 @@
   
 
       <!-- Portfolio -->
-      <article class="row border border-2 border-primary rounded p-3" id="portfolio">
+      <article class="row border border-2 border-primary rounded p-3 shadow" id="portfolio">
         <section class="titreProj col-12 text-center">
           <h2>Mon Portfolio</h2>
         </section>
@@ -139,7 +139,7 @@
       </article>
 
       <!-- Maitresse Gé -->
-      <article class="row border border-2 border-primary rounded p-3 mt-lg-5" id="maitressege">
+      <article class="row border border-2 border-primary rounded p-3 mt-lg-5 shadow" id="maitressege">
         <section class="titreProj col-12 text-center">
           <h2>Blog de MaitresseGe</h2>
         </section>
@@ -158,7 +158,7 @@
       </article>
       
       <!-- Pilou art -->
-      <article class="row border border-2 border-primary rounded p-3 mt-lg-5" id="pilouart">
+      <article class="row border border-2 border-primary rounded p-3 mt-lg-5 shadow" id="pilouart">
         <section class="titreProj col-12 text-center">
           <h2>Galerie de Pilou_art</h2>
         </section>
@@ -177,10 +177,10 @@
       </article>
 
       <!-- CTA -->
-      <article class="text-center alert alert-info mt-lg-5">
+      <article class="text-center alert alert-info mt-lg-5 shadow">
         <p>Ces projets vous plaisent? Vous êtes interressés par mon travail?</p>
         <p>N'hésitez plus</p>
-        <a class="btn btn-primary btn-lg" href="contact.html">Contactez-moi</a>
+        <a class="btn btn-primary btn-lg shadow" href="contact.html">Contactez-moi</a>
       </article>
 
       
@@ -188,7 +188,7 @@
     </main>
 
     <div class="my-5 d-flex justify-content-end">
-      <a href="#top" class="btn btn-secondary me-5">Remonter</a>
+      <a href="#top" class="btn btn-secondary me-5 shadow">Remonter</a>
     </div>
 
    <!-- Footer -->
