show more contact page less bonus page

--- a/snake.html
+++ b/snake.html
@@ -46,7 +46,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarColor03">
+        <div class="collapse navbar-collapse me-lg-3" id="navbarColor03">
           <ul class="navbar-nav ms-auto text-center">
             <li class="nav-item">
               <a class="nav-link" href="index.html">Accueil</a>
@@ -61,8 +61,7 @@
               <a class="nav-link" href="cv.html">Curriculum Vitae</a>
             </li>
             <li class="nav-item">
-                <a href="bonus.html" class="nav-link active">Bonus</a>
-                <span class="visually-hidden">(current)</span>
+              <a href="contact.html" class="nav-link">Contact</a>
             </li>
           </ul>
         </div>
@@ -119,13 +118,14 @@
 
     <section class="col-12 col-sm-6 col-md-4 row">
       <h4>Liens internes</h4>
-      <a href="contact.html">Contactez-moi</a>
+      <a href="bonus.html">Bonus</a>
       <a href="mentions.html">Mentions Légales</a>
+      <a href="contact.html">Contactez-moi</a>
     </section>
     <p class="col-12 mt-2">&copy; <span id="annee"></span> - Pierre-Loup Perez</p>
   </footer>
 
-
+    <!-- Scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
       integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
