add logo and mini-log nearly everywhere

--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,7 @@
 
   <!-- Header -->
   <header class="container-fluid text-center mb-5">
+    <img src="/assets/android-chrome-192x192.png" alt="logo pilou dev web" class="logo80">
     <figure class="text-intro">
       <blockquote class="blockquote">
         <h1 class="mb-2 display-4">Contactez-moi</h1>
@@ -86,7 +87,7 @@
 
     <!-- Formulaire -->
     <form name="contactPortfolio" method="post" netlify-honeypot="bot-field" data-netlify="true">
-      <h2>Formulaire de contact</h2>
+      <h2><img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Formulaire de contact</h2>
       <p class="hidden">
         <label>Ne remplissez pas ceci si vous êtes un humain: <input name="bot-field" /></label>
       </p>
