--- a/mentions.html
+++ b/mentions.html
@@ -69,6 +69,7 @@
 
     <!-- Header -->
     <header class="container-fluid text-center mb-5">
+      <img src="/assets/android-chrome-192x192.png" alt="logo pilou dev web" class="logo80">
       <figure class="text-intro">
         <blockquote class="blockquote">
           <h1 class="mb-2 display-4">Mentions Légales</h1>
@@ -94,53 +95,56 @@
         <a href="https://perezpl.fr" target="_blank">perezpl.fr</a> les
         informations suivantes :
       </p>
+      <div class="alert alert-secondary text-center">
 
-      <h2>1. Informations légales :</h2>
-
-      <p>
-        Statut du propriétaire : <strong>particulier</strong><br>
-        Le Propriétaire est : <strong>Pierre-Loup Perez</strong><br>
-        Adresse postale du propriétaire :
-        <strong>19 avenue Salvador Allende 69800 Saint Priest</strong>
-      </p>
-      <p>
-        Le Créateur du site est : <strong>perezpl.fr</strong><br>
-        Le Responsable de la  publication est :
-        <strong>Pierre-Loup Perez</strong><br>
-        Contacter le responsable de la publication :
-        <strong>pierreloup.perez@gmail.com</strong><br>
-        Le responsable de la publication est une <strong>personne physique</strong>
-      </p>
-      <p>    
-        Le Webmaster est  : <strong>Pierre-Loup Perez</strong><br>
-        Contacter le Webmaster : 
-        <strong>
-          <a
-            href="mailto:pierreloup.perez@gmail.com?subject=Contact a partir des mentions lÃ©gales via le site perezpl.fr"
-            >pierreloup.perez@gmail.com</a>
-          </strong>
-          <br>
-        L’hebergeur du site est :
-        <strong>Netlify 2325 3rd Street, Suite 296 94107 San Francisco</strong>
-      </p>
-
-      <p>
-        <strong><u>CREDIT:</u> </strong> Les mentions légales ont étés générées
-        par <strong>
-          <a
-            href="https://www.generer-mentions-legales.com/generateur-mentions-legales.html"
-            target="_blank"  rel="nofollow"
-            >générateur de mentions legales</a>
-            </strong>.
+        <h2>1.<img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Informations légales :</h2>
+  
+        <p>
+          Statut du propriétaire : <strong>particulier</strong><br>
+          Le Propriétaire est : <strong>Pierre-Loup Perez</strong><br>
+          Adresse postale du propriétaire :
+          <strong>19 avenue Salvador Allende 69800 Saint Priest</strong>
+        </p>
+        <p>
+          Le Créateur du site est : <strong>perezpl.fr</strong><br>
+          Le Responsable de la  publication est :
+          <strong>Pierre-Loup Perez</strong><br>
+          Contacter le responsable de la publication :
+          <strong>pierreloup.perez@gmail.com</strong><br>
+          Le responsable de la publication est une <strong>personne physique</strong>
+        </p>
+        <p>    
+          Le Webmaster est  : <strong>Pierre-Loup Perez</strong><br>
+          Contacter le Webmaster : 
+          <strong>
+            <a
+              href="mailto:pierreloup.perez@gmail.com?subject=Contact a partir des mentions lÃ©gales via le site perezpl.fr"
+              >pierreloup.perez@gmail.com</a>
+            </strong>
             <br>
-        Une eau toujours potable avec les <strong>
-          <a
-            href="https://www.chamarrel.com/perles-de-ceramique-em-pxl-29_37.html"  rel="nofollow"
-            >perles de céramique</a>
-            </strong>.
-      </p>
+          L’hebergeur du site est :
+          <strong>Netlify 2325 3rd Street, Suite 296 94107 San Francisco</strong>
+        </p>
+  
+        <p>
+          <strong><u>CREDIT:</u> </strong> Les mentions légales ont étés générées
+          par <strong>
+            <a
+              href="https://www.generer-mentions-legales.com/generateur-mentions-legales.html"
+              target="_blank"  rel="nofollow"
+              >générateur de mentions legales</a>
+              </strong>.
+              <br>
+          Une eau toujours potable avec les <strong>
+            <a
+              href="https://www.chamarrel.com/perles-de-ceramique-em-pxl-29_37.html"  rel="nofollow"
+              >perles de céramique</a>
+              </strong>.
+        </p>
 
-      <h2>2. Présentation et principe :</h2>
+      </div>
+
+      <h2>2.<img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Présentation et principe :</h2>
 
       <p>
         Est désigné ci-après : <strong>Utilisateur</strong>, tout internaute se
@@ -163,7 +167,7 @@
         responsabilité exclusive.
       </p>
 
-      <h2>3. Accessibilité :</h2>
+      <h2>3.<img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Accessibilité :</h2>
 
       <p>
         Le site perezpl.fr est par principe accessible aux utilisateurs 24/24h,
@@ -178,7 +182,7 @@
       </p>
        
 
-      <h2>4. Propriété intellectuelle :</h2>
+      <h2>4.<img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Propriété intellectuelle :</h2>
 
       <p>
         Pierre-Loup Perez est propriétaire exclusif de tous les droits de
@@ -196,7 +200,7 @@
         Intellectuelle.
       </p>
 
-      <h2>5. Liens hypertextes et cookies :</h2>
+      <h2>5.<img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Liens hypertextes et cookies :</h2>
 
       <p>
         Le site perezpl.fr contient un certain nombre de liens hypertextes vers
@@ -223,8 +227,8 @@
         fonction de votre version.
       </p>
 
-      <h2>
-        6. Protection des biens et des personnes - gestion des données
+      <h2>6.<img src="/assets/favicon.ico" alt="mini-logo" class="icone"> 
+        Protection des biens et des personnes - gestion des données
         personnelles :
       </h2>
 
