--- a/snake.html
+++ b/snake.html
@@ -70,6 +70,7 @@
     
     <!-- Header -->
     <header class="container-fluid text-center mb-5">
+      <img src="/assets/android-chrome-192x192.png" alt="logo pilou dev web" class="logo80">
        <figure class="text-intro">
          <blockquote class="blockquote">
            <h1 class="mb-2 display-4">Snake</h1>
