--- a/cv.html
+++ b/cv.html
@@ -73,6 +73,7 @@
 
     <!-- Header -->
     <header class="container-fluid text-center mb-5">
+      <img src="/assets/android-chrome-192x192.png" alt="logo pilou dev web" class="logo80">
        <figure class="text-intro">
          <blockquote class="blockquote">
            <h1 class="mb-2 display-4">Curriculum Vitae</h1>
@@ -86,7 +87,7 @@
     <main class="container text-center ">
       <!-- titre du CV -->
       <div class="row align-items-center justify-content-center alert alert-secondary py-5 py-md-4 shadow">
-        <h2 class="col-12 col-sm-6 col-md-8 text-primary">Développeur Web Junior</h2>
+        <h2 class="col-12 col-sm-6 col-md-8 text-primary display-5 my-auto">Développeur Web Junior</h2>
         <img class="photoProfil col-12 col-sm-6 col-md-4" src="/assets/PhotoCV1reduit.jpg" alt="photo pierre-loup" title="Photo de CV de Pierre-Loup Perez - Web Developper">
       </div>
       <p class="mt-3"><span id="age"></span> ans, permisB, véhiculé</p>
@@ -101,7 +102,9 @@
 
           <!-- Competences -->
           <article>
-            <h3 class="mb-3 alert alert-secondary shadow-sm">Competences</h3>
+            <h3 class="mb-3 alert alert-secondary shadow-sm">
+              <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Competences
+            </h3>
             <section class="row align-items-center">
               <h4 class="col-12 col-lg-2">WebDev</h4>
               <p class="col-12 col-lg-3">
@@ -143,7 +146,9 @@
           <hr class="mx-5">
           <!-- Expériences -->
           <article>
-            <h3 class="alert alert-secondary shadow-sm">Experiences</h3>
+            <h3 class="alert alert-secondary shadow-sm">
+              <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Experiences
+            </h3>
             <section class="row align-items-center">
               <h4 class="col-12 col-lg-3">2011-2021</h4>
               <div class="col-12 col-lg-9">
@@ -154,6 +159,7 @@
                   <li>Gestionnaire des archives musicales : rangement, classement et gestion des partitions de l’ensemble des musiciens de l’orchestre</li>
                   <li>Musicien professionnel et arrangeur au sein du quintette de cuivre</li>
                   <li>Responsable du studio d’enregistrement : organisation de l’enregistrement, du montage et de l’édition de CD</li>
+                  <li>Graphiste : réalisations de bannières, de flyers, d'affiches de concert et de l'ensemble des graphisme d'un livre historique</li>
                 </ul>
               </div>
             </section>
@@ -174,7 +180,9 @@
 
         <!-- Colonne de droite -->
         <aside class="col-12 col-md-4 border-start">
-          <h3 class="alert alert-secondary shadow-sm">Formations</h3>
+          <h3 class="alert alert-secondary shadow-sm">
+            <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Formations
+          </h3>
           <section>
             <h4>2021-2022</h4>
             <p>Développeur Web et Web Mobile au GRETA Lyon-Métropole</p>
@@ -204,7 +212,9 @@
 
       <!-- Pied du CV - Intérets -->
       <article class="col-12 row align-items-center justify-content-evenly">
-        <h3 class="col-12 col-md-3 alert alert-secondary shadow-sm">Interets</h3>
+        <h3 class="col-12 col-md-3 alert alert-secondary shadow-sm">
+          <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Interets
+        </h3>
         <ul class="col-12 col-md-8 text-start">
           <li>Informatique : intérêt personnel pour la Cybersécurité</li>
           <li>Sport : golf, football, running</li>
