--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 
   <!-- Header -->
   <header class="container-fluid text-center mb-5">
+    <img src="/assets/android-chrome-192x192.png" alt="logo pilou dev web" class="logo80">
     <figure class="text-intro">
       <blockquote class="blockquote">
         <h1 class="mb-2 display-4">Développeur Web et Web Mobile</h1>
@@ -83,9 +84,13 @@
 
   <!-- Main -->
   <main class="container text-center">
+
     <article class="my-3 row align-items-center">
-      <h2 class="col-12 col-md-6 order-md-2">Qui suis-je?</h2>
-      <section class="col-12 col-md-6 order-md-1 justify-content-center">
+      <img src="/assets/android-chrome-512x512.png" alt="logo pilou dev Web" class="col-12 col-md-4">
+      <h2 class="col-12 col-md-4 order-md-2">
+        <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Qui suis-je?
+      </h2>
+      <section class="col-12 col-md-4 order-md-1 justify-content-center">
         <p>Développeur Web Fullstack Junior</p>
         <p>Ancien Musicien-militaire reconverti</p>
         <p>Créatif/Constructif/Curieux</p>
@@ -96,7 +101,9 @@
     <hr class="mx-5 bg-primary" />
 
     <article class="my-3 row align-items-center">
-      <h2 class="col-12 col-md-6">Curriculum Vitae</h2>
+      <h2 class="col-12 col-md-6">
+        <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Curriculum Vitae
+      </h2>
       <section class="col-12 col-md-6 justify-content-center">
         <p>Front: Html/Css Scss/Sass Javascript Wordpress</p>
         <p>Back: Php/mySql Laravel</p>
