--- a/index.html
+++ b/index.html
@@ -87,10 +87,8 @@
 
     <article class="my-3 row align-items-center">
       <img src="/assets/android-chrome-512x512.png" alt="logo pilou dev Web" class="col-12 col-md-4">
-      <h2 class="col-12 col-md-4 order-md-2">
-        <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Qui suis-je?
-      </h2>
-      <section class="col-12 col-md-4 order-md-1 justify-content-center">
+      <h2 class="col-12 col-md-4">Qui suis-je?</h2>
+      <section class="col-12 col-md-4 justify-content-center">
         <p>Développeur Web Fullstack Junior</p>
         <p>Ancien Musicien-militaire reconverti</p>
         <p>Créatif/Constructif/Curieux</p>
@@ -101,9 +99,7 @@
     <hr class="mx-5 bg-primary" />
 
     <article class="my-3 row align-items-center">
-      <h2 class="col-12 col-md-6">
-        <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Curriculum Vitae
-      </h2>
+      <h2 class="col-12 col-md-6">Curriculum Vitae</h2>
       <section class="col-12 col-md-6 justify-content-center">
         <p>Front: Html/Css Scss/Sass Javascript Wordpress</p>
         <p>Back: Php/mySql Laravel</p>
