correct blitz config

--- a/bonus.html
+++ b/bonus.html
@@ -110,7 +110,7 @@
           <p>Basé sur le gameplay d'un jeu sorti en 1983 sur Commodore64</p>
           <p>Le jeu est jouable, mais il me reste encore à travailler les graphismes, et à ajouter le passage du gorille sur les immeubles</p>
           <a class="btn btn-secondary" href="blitz.html">Essayer le jeu</a>
-          <a class="btn btn-light" href="https://en.wikipedia.org/wiki/Snake_(video_game_genre)">Historique du jeu</a>
+          <a class="btn btn-light" href="#">Historique du jeu</a>
         </article>
       
         
